style to match logo

--- a/src/flavors/phila2035/static/css/custom.css
+++ b/src/flavors/phila2035/static/css/custom.css
@@ -1,41 +1,169 @@
-/*
- * This CSS file follows the default Shareabouts style.css.
- * All rules herein will override the default Shareabouts styles.
- * NOTE: "With great power comes great responsibility."
- */
 
-/* =Header
+/* =Color Palette 
+-------------------------------------------------------------- */
+
+/* 
+#0171a6 blue
+#e6801b orange
+#8e58a4 purple
+#66c06b green
+*/
+
+
+/* =Base Styles
+-------------------------------------------------------------- */
+
+body {
+  background-color: #eee;
+}
+
+/* Typography */
+body, select, input, textarea {
+/*  font-family: Tahoma, Verdana, Segoe, sans-serif;*/
+}
+
+/* Buttons */
+.btn,
+.btn:visited,
+.btn:link {
+  background-color: #0171a6;
+  color: #fff;
+}
+.btn:hover, .button:hover, button:hover {
+  background-color: #e6801b;
+}
+.btn-primary, .btn-primary:visited, .btn-primary:link {
+  background-color: #0171a6;
+  color: #fff;
+}
+.btn-primary:hover {
+  background-color: #e6801b;
+}
+.btn-secondary,
+.btn-secondary:visited,
+.btn-secondary:link {
+  background-color: #0171a6;
+  color: #fff;
+}
+.btn-secondary:hover {
+  background-color: #e6801b;
+  color: #fff;
+}
+
+/* Forms */
+label {
+}
+input[type=date],
+input[type=datetime],
+input[type=datetime-local],
+input[type=email],
+input[type=month],
+input[type=number],
+input[type=password],
+input[type=tel],
+input[type=text],
+input[type=time],
+input[type=url],
+input[type=week],
+textarea {
+  border: 0.25em solid #ccc;
+}
+input:focus,
+textarea:focus {
+  border: 0.25em solid #66c06b;
+  outline: 2px solid #66c06b;
+}
+
+
+/* =The Site Header
 -------------------------------------------------------------- */
 
 #site-header {
-  color: #eee;
+  color: #555;
   background-color: #fff;
-  position: relative;
-  z-index: 40;
-  padding: 0.5em;
-  box-shadow: 0 0.325em 0 rgba(0,0,0,0.1);
 }
+#site-logo {
+  float: left;
+  max-height: 1.375em;
+  margin-bottom: 0.25em;
+}
+#nav-btn {
+  background-color: #fff;
+  color: #e6801b;
+  text-shadow: none;
+}
+.access a, 
+.access a:visited, 
+.access a:active, 
+.access a:link {
+  color: #fff;
+  background-color: #0171a6;
+  border: 0;
+}
+.access a:hover {
+  background-color: #e6801b;
+  color: #fff;
+}
+#auth-nav-container {
+}
+.sign-in-menu {
+  background-color: #ddd;
+}
+.sign-in-menu:before {
+  border-bottom-color: #ddd;
+}
+a#sign-in-btn {
+  color: #0171a6;
+}
+a#sign-in-btn:hover {
+  color: #e6801b;
+}
+
+
+/* =The Big Button to Add A New Point
+-------------------------------------------------------------- */
+
+#add-place-btn-container {
+  background-color: #fff;
+  border-bottom: 0;
+}
+a.add-place {
+  background-color: #000;
+  color: #eee;
+  text-shadow: none;
+}
+a.add-place:hover {
+  color: #fff;
+}
+
 
 /* =Geocoding
 -------------------------------------------------------------- */
 
 #geocode-address-bar {
   background-color: #eee;
-}
-.geocoding-enabled #geocode-address-bar {
-  display: block;
-}
-.geocode-address-form {
-  position: relative;
+  border-right: 1px solid #ddd;
 }
 input.geocode-address-field {
-  width: 100%;
   border-width: 0;
-  line-height: 1.25;
   background-color: #fff;
-  color: #eee;
-  padding-left: 2.125em;
+  color: #555;
 }
+#geocode-address-bar .error {
+  line-height: 1.75;
+  background-color: #F26161;
+  box-shadow: 2px 2px 0 #F26161, 2px -2px 0 #F26161, -2px 2px 0 #F26161, -2px -2px 0 #F26161;
+}
+#geocode-address-bar .error + form {
+  box-shadow: 2px 2px 0 #F26161, 2px -2px 0 #F26161, -2px 2px 0 #F26161, -2px -2px 0 #F26161;
+}
+#geocode-address-bar .error.is-hidden + form {
+  box-shadow: none;
+}
+.geocode-spinner {
+  background-color: #fff;
+}
+
 
 /* =The Ticker
 -------------------------------------------------------------- */
@@ -43,31 +171,109 @@ input.geocode-address-field {
 #ticker {
   background-color: #fff;
 }
-ul.recent-points {
-  color: #000;
-}
-.recent-points li {
+.legend {
+  background-color: #fff;
+  margin: 0;
+  padding: 1em;
+  list-style: none;
   border-bottom: 1px solid #ddd;
 }
+.recent-points li {}
 .recent-points li:hover {
   background: #eee;
 }
 .recent-points a {
-  color: #000;
+  color: #555;
+  border-bottom: 1px solid #ddd;
 }
 .recent-points li:hover a,
 .recent-points a:hover {
-  color: #000;
+  color: #fff;
+  background-color: #e6801b;
+  border-color: #e6801b;
 }
+
+
+/* =Footer
+-------------------------------------------------------------- */
+
+#colophon {
+  background-color: #eee;
+  color: #555;
+}
+a.shareabouts-logo {
+  color: #308fbf !important;
+}
+a.openplans-logo {
+  color: #f68a3d !important;
+}
+
+
+/* =Place Details
+-------------------------------------------------------------- */
+
+/* Promotion: Voting & Sharing */
+.user-support label {
+  color: #fff;
+}
+.user-support input[type=checkbox]:checked ~ label {
+}
+.user-support:hover label {
+  background-color: #e6801b;
+  color: #fff;
+}
+
 
 /* =Media Queries
 -------------------------------------------------------------- */
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 22em) {
+  #site-tagline {
+    display: block;
+  }
 }
 
-@media only screen and (min-width: 1024px) {
-}
-
-@media only screen and (min-width: 1300px) {
+@media only screen and (min-width: 60em) {
+  #site-title a:link,
+  #site-title a:visited {
+    font-size: 1em;
+  }
+  #site-logo {
+    max-height: 4em;
+  }
+  .access {
+/*    font-size: 0.75em;*/
+  }
+  .access li {
+    margin: 0;
+  }
+  .access a, 
+  .access a:visited, 
+  .access a:active, 
+  .access a:link {
+    background-color: #fff;
+    color: #e6801b;
+    box-shadow: none;
+  }
+  .access a:hover {
+    background-color: #0171a6;
+    color: #fff;
+  }
+  .list-toggle-nav {
+/*    font-size: 0.75em;*/
+    float: left;
+  }
+  a.list-toggle-btn:visited, 
+  a.list-toggle-btn:active, 
+  a.list-toggle-btn:link {
+    background-color: #fff;
+    color: #e6801b;
+    text-shadow: none;
+    box-shadow: none;
+    border: 0;
+  }
+  a.list-toggle-btn:hover {
+    color: #fff;
+    background-color: #0171a6;
+  }
 }
