--- a/src/flavors/phila2035/templates/index.html
+++ b/src/flavors/phila2035/templates/index.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block site-title %}
-<a href="http://phila2035.org/" target="_blank"><img id="site-logo" src="/static/css/images/Phila2035-01.jpg"></a>
+<a href="http://phila2035.org/" target="_blank"><img id="site-logo" src="/static/css/images/Phila2035.gif"></a>
 {% endblock %}
 
 {% block meta %}
