fix add button container bg color

--- a/src/flavors/phila2035/static/css/custom.css
+++ b/src/flavors/phila2035/static/css/custom.css
@@ -276,4 +276,7 @@ a.openplans-logo {
     color: #fff;
     background-color: #0171a6;
   }
+  #add-place-btn-container {
+    background-color: transparent;
+  }
 }
