--- a/src/flavors/phila2035/templates/index.html
+++ b/src/flavors/phila2035/templates/index.html
@@ -44,10 +44,10 @@
 {% block sidebar %}
 
 <ul class="legend">
-  <li class="clearfix"><img src="/static/css/images/dot-04.png"> Strengths</li>
-  <li class="clearfix"><img src="/static/css/images/dot-01.png"> Weaknesses</li>
-  <li class="clearfix"><img src="/static/css/images/dot-03.png"> Opportunities</li>
-  <li class="clearfix"><img src="/static/css/images/dot-02.png"> Threats</li>
+  <li class="clearfix"><img src="/static/css/images/dot-04.png"> Destination <small><br/>Where do you go to work, shop, play?</small></li>
+  <li class="clearfix"><img src="/static/css/images/dot-01.png"> Barrier <small><br/>What barriers exist that make it difficult to get to your destination?</small></li>
+  <li class="clearfix"><img src="/static/css/images/dot-03.png"> Asset <small><br/>What are some of the strengths of your district?</small></li>
+  <li class="clearfix"><img src="/static/css/images/dot-02.png"> Opportunity <small><br/>What areas could be opportunities for change?</small></li>
 </ul>
 {% endblock %}
 
