--- a/src/flavors/phila2035/templates/index.html
+++ b/src/flavors/phila2035/templates/index.html
@@ -67,7 +67,7 @@ var mapQuest_geocode = Shareabouts.Util.MapQuest.geocode;
 Shareabouts.Util.MapQuest.geocode = function(location, bounds, options) {
   // Since this is all Chicago-specific, go ahead and specify the city.
   if (location.toLowerCase().indexOf('NYC') === -1) {
-    location += ', NYC NY'
+    location += ', Philadelphia, PA'
   }
   return mapQuest_geocode.call(this, location, bounds, options);
 }
