New logo, revert to old icons, edit directions in the place form

--- a/src/flavors/phila2035/templates/index.html
+++ b/src/flavors/phila2035/templates/index.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block site-title %}
-<a href="http://phila2035.org/" target="_blank"><img id="site-logo" src="/static/css/images/Phila2035.gif"></a>
+<a href="http://phila2035.org/" target="_blank"><img id="site-logo" src="/static/css/images/logo.jpg"></a>
 {% endblock %}
 
 {% block meta %}
@@ -46,8 +46,8 @@
 <ul class="legend">
   <li class="clearfix"><img src="/static/css/images/legend-13.png"> <strong>Destination</strong> <small><br/>Where do you go to work, shop, play?</small></li>
   <li class="clearfix"><img src="/static/css/images/legend-14.png" > <strong>Barrier</strong> <small><br/>What barriers exist that make it difficult to get to your destination?</small></li>
-  <li class="clearfix"><img src="/static/css/images/legend-15.png"> <strong>Asset</strong> <small><br/>What are some of the strengths of your district?</small></li>
-  <li class="clearfix"><img src="/static/css/images/legend-16.png"> <strong>Opportunity</strong> <small><br/>What areas could be opportunities for change?</small></li>
+  <li class="clearfix"><img src="/static/css/images/legend-16.png"> <strong>Asset</strong> <small><br/>What are some of the strengths of your district?</small></li>
+  <li class="clearfix"><img src="/static/css/images/legend-15.png"> <strong>Opportunity</strong> <small><br/>What areas could be opportunities for change?</small></li>
 </ul>
 {% endblock %}
 
