--- a/src/flavors/phila2035/static/css/custom.css
+++ b/src/flavors/phila2035/static/css/custom.css
@@ -30,6 +30,8 @@ label { font-size: 1em; text-transform: none; color: #555; }
 .btn:link {
   background-color: #0171a6;
   color: #fff;
+  text-transform: none;
+  font-size: 16px;
 }
 .btn:hover, .button:hover, button:hover {
   background-color: #e6801b;
@@ -37,6 +39,13 @@ label { font-size: 1em; text-transform: none; color: #555; }
 .btn-primary, .btn-primary:visited, .btn-primary:link {
   background-color: #0171a6;
   color: #fff;
+  text-transform: uppercase;
+  font-size: 1.25em;
+  font-weight: bold;
+  text-decoration: none;
+  line-height: 1.125em;
+  display: block;
+  padding: 0.5em 0.675em;
 }
 .btn-primary:hover {
   background-color: #e6801b;
@@ -51,6 +60,16 @@ label { font-size: 1em; text-transform: none; color: #555; }
 .btn-secondary:hover {
   background-color: #e6801b;
   color: #fff;
+}
+
+.btn-large {
+  text-transform: uppercase;
+  font-size: 1.25em;
+  font-weight: bold;
+  text-decoration: none;
+  line-height: 1.125em;
+  display: block;
+  padding: 0.625em 0.625em;
 }
 
 .drag-marker-instructions,
