New categories and icons

--- a/src/flavors/phila2035/templates/index.html
+++ b/src/flavors/phila2035/templates/index.html
@@ -44,10 +44,10 @@
 {% block sidebar %}
 
 <ul class="legend">
-  <li class="clearfix"><img src="/static/css/images/legend-13.png"> <strong>Destination</strong> <small><br/>Where do you go to work, shop, play?</small></li>
-  <li class="clearfix"><img src="/static/css/images/legend-14.png" > <strong>Barrier</strong> <small><br/>What barriers exist that make it difficult to get to your destination?</small></li>
-  <li class="clearfix"><img src="/static/css/images/legend-16.png"> <strong>Asset</strong> <small><br/>What are some of the strengths of your district?</small></li>
-  <li class="clearfix"><img src="/static/css/images/legend-15.png"> <strong>Opportunity</strong> <small><br/>What areas could be opportunities for change?</small></li>
+  <li class="clearfix"><img src="/static/css/images/legend-16.png"> <strong>Strengths</strong> <small><br/>What is a strength in your district? Think about destinations, landmarks, and assets.</small></li>
+  <li class="clearfix"><img src="/static/css/images/weakness-13.png"> <strong>Weaknesses</strong> <small><br/>What can or needs to be improved in the physical environment?</small></li>
+  <li class="clearfix"><img src="/static/css/images/legend-15.png"> <strong>Opportunities</strong> <small><br/>What areas are opportunities for change? Think about areas that are not living up to their potential that could be repositioned.</small></li>
+  <li class="clearfix"><img src="/static/css/images/legend-14.png" > <strong>Barriers</strong> <small><br/>What impediments exist to accessing your destinations and strengths?</small></li>
 </ul>
 {% endblock %}
 
